# HoeBot

./: .env.example  .gitignore  .readme.md  pyproject.toml
src/: botCommands.py  main.py
src/modals/: __init__.py
src/modals/AddGameComplete/: AddGameCompleteModal.py  AddGameCompleteModel.py
src/modals/Birthday/: BirthdayModal.py
src/tasks/: birthdayCheck.py
src/util/: commandUtil.py  logging.py
src/views/basicPaginator/: BasicPaginator.py
tests/: test_botcommands.py
